src/tests/unary-operators/2.txt
unary-operators/2.c:3:5: error: invalid operand to logical '!' (have 'char', need 'int')
     !c;
     ^
